clusters/desire/root-dev/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: root
  namespace: root-dev
spec:
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 120
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  minReadySeconds: 1
  selector:
    matchLabels:
      app: root
  template:
    metadata:
      labels:
        app: root
    spec:
      containers:
      - name: root
        image: ghcr.io/uhthomas/6f.io@sha256:192d026a53b1bf00a3a05cc35a4eaef6dcb4a67155ef18da2013403cbeb51eb6
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 2Mi
            cpu: 2m
          limits:
            memory: 8Mi
            cpu: 5m
