clusters/desire/root-dev/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: root
  namespace: root-dev
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: root
